<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/icon_st_fx_wechat"
            android:gravity="center_horizontal"
            android:text="@string/share_wechat"
            android:textColor="#666"
            android:textSize="11sp"/>


        <TextView
            android:id="@+id/tv_wechat_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/icon_st_fx_pyq"
            android:gravity="center_horizontal"
            android:text="@string/share_wechat_moment"
            android:textColor="#666"
            android:textSize="11sp"/>


        <TextView
            android:id="@+id/tv_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/icon_st_fx_wb"
            android:gravity="center_horizontal"
            android:text="@string/share_sina"
            android:textColor="#666"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/icon_st_fx_friend"
            android:gravity="center_horizontal"
            android:text="@string/share_water_friend"
            android:textColor="#666"
            android:textSize="11sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/share_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

</LinearLayout>